#541 Fixed scroll on the invoice overview + transfer

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
@@ -30,6 +30,8 @@
         </div>
     </div>
     <invoice-edit
+        class="full-height"
+        customScroll
         [invoiceVM]="currentInvoice"
         [invoiceOperationsPageData]="invoiceOperationsPageData"
         (invoiceChanged)="emitInvoiceChanged($event)"
