--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-details/template/booking-details-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-details/template/booking-details-editor.html
@@ -87,6 +87,23 @@
             <textarea class="form-control notes" [(ngModel)]="bookingDO.invoiceNotes" name="invoiceNotes"></textarea>
         </div>
     </div>
+
+    <div class="row padding-top-5px">
+        <div class="col-xs-12 col-sm-1">
+            <p>{{'Confirmation Notes' | translate}}</p>
+        </div>
+        <div class="col-xs-12 col-sm-8 field-value text-field" *ngIf="readonly || invoiceIsClosed">
+            <p class="notes" *ngIf="!confirmationNotesAreEmpty">{{bookingDO.confirmationNotes}}</p>
+            <p class="placeholder" *ngIf="confirmationNotesAreEmpty">{{'None' | translate}}</p>
+        </div>
+        <div class="col-xs-12 col-sm-8 field-value text-field" *ngIf="invoiceIsClosed && !readonly">
+            <p class="text-muted small"> <i class="fa fa-info-circle"></i>{{ 'After the invoice has been closed, confirmation notes cannot be edited anymore.' | translate }}</p>
+        </div>
+        <div class="col-xs-12 col-sm-8 form-group" *ngIf="!readonly && !invoiceIsClosed">
+            <textarea class="form-control notes" [(ngModel)]="bookingDO.confirmationNotes" name="confirmationNotes"></textarea>
+        </div>
+    </div>
+
     <div class="row padding-top-5px">
         <div class="col-xs-12 col-sm-1">
             <p>{{'Files' | translate}}</p>
