--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/template/rooms-canvas.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/template/rooms-canvas.html
@@ -21,6 +21,10 @@
 			<span class="unitpal-font f-20">\</span>
 		</div>
 	</div>
+	<div class="status p-t-8 p-b-8 f-14 text-center">
+		{{totalOccupiedRooms}} {{ 'Total Occupied Rooms' | translate }}<br>
+		{{totalInHouseGuests}} {{ 'Total In-House Guests' | translate }}
+	</div>
 </div>
 <div class="rooms-canvas-upper"></div>
 <div customScroll class="body rooms-canvas">
