--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -2258,6 +2258,11 @@ a.btn.btn-square:focus {
             color: #5b5b62;
         }
 
+        .operations-dashboard .header .status{
+            color: #5b5b62;
+            
+        }
+
         .operations-dashboard .pane-search-bar{
             justify-content: space-between;
             display: flex;
