--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -352,7 +352,7 @@ input.form-control:only-child {
     .date-interval-picker-arrow {
         display: none;
     }
-}
+}.card
 
 label.form-warning {
     padding: 4px 8px;
@@ -1401,6 +1401,12 @@ table.lazy-loading td.right {
 
 table.lazy-loading .pagination-container {
     padding-right: 10px;
+}
+
+table.lazy-loading tbody td input[type="text"] {
+    width: 100%;
+    height: 100%;
+    border: none;
 }
 
 /* This is to override default pagination style */
@@ -4857,4 +4863,9 @@ textarea.payer-details {
 .card-header .section1 .invoice-info .invoice-price {
     max-width: 60px;
     padding-left: 2px;
+}
+
+.sub-tabs a,
+.sub-tabs a:hover {
+    color: #555;
 }
