--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -352,7 +352,7 @@ input.form-control:only-child {
     .date-interval-picker-arrow {
         display: none;
     }
-}.card
+}
 
 label.form-warning {
     padding: 4px 8px;
