--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/integrations/pages/bookingdotcom/steps/authentication/template/booking-dot-com-integration-authentication-step.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/integrations/pages/bookingdotcom/steps/authentication/template/booking-dot-com-integration-authentication-step.html
@@ -1,5 +1,6 @@
 <div class="row row m-l-16 m-b-24">{{ 'Fill your Booking.com authentication data.' | translate }}</div>
-<form [formGroup]="getDefaultFormGroup()" class="integration-form col-xs-8 col-md-8">
+<loading-component [isLoading]="isLoading"></loading-component>
+<form *ngIf="!isLoading" [formGroup]="getDefaultFormGroup()" class="integration-form col-xs-8 col-md-8">
     <div class="row">
         <div class="col-xs-12 col-md-6 form-group">
             <label>{{ 'Account Name' | translate }}</label>
@@ -27,7 +28,7 @@
     </div>
     <div class="row">
         <div class="col-xs-3 col-xs-offset-9 col-md-3 col-md-offset-9">
-            <button type="button" class="btn btn-primary btn-block" (click)="save()">
+            <button type="button" class="btn btn-primary btn-block" (click)="saveAuthenticationData()">
                 <i *ngIf="isSaving" class="fa fa-spinner fa-pulse"></i> {{ 'Save Changes' | translate }}
             </button>
         </div>
